--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "docmorris-react-native-web",
   "version": "0.1.0",
   "private": true,
+  "types": "dist",
+  "main": "dist",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,12 +12,14 @@
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-native": "^0.72.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.9",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "babel-plugin-react-native-web": "^0.19.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,9 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-native": "^0.72.6",
-    "babel-plugin-react-native-web": "^0.19.9"
   }
 }
