--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,15 @@
     "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx",
-    "outDir": "dist"
+    "outDir": "dist",
+    "skipLibCheck": true
   },
   "include": [
     "src"
   ],
   "exclude": [
     "dist",
+    "build",
     "node_modules"
   ]
 }
